# papers-rag-agent

./: .cursorignore  .env.example  .gitignore  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  DEPLOYMENT.md  Dockerfile  LANGGRAPH_SETUP.md  README-ja.md  README.md  SETUP.md  Taskfile.yml  chainlit.md  chainlit_en-US.md  chainlit_ja-JP.md  docker-compose.yml  docker-entrypoint.sh  ja.md  pyproject.toml  requirements.txt
.chainlit/: config.toml
.chainlit/translations/: ja.json
.cursor/rules/: commit.mdc  dspy.mdc  implementation.mdc  markdown.mdc
.github/workflows/: deploy.yml  pr-test.yml  test.yml  update-readme-url.yml
chainlit/: Dockerfile
docker/chainlit/: Dockerfile
docker/fastapi/: Dockerfile
docs/graphs/: README.md  content_enhancement.md  content_enhancement.mmd  corrective_rag.md  corrective_rag.mmd  message_routing.md  message_routing.mmd
docs/guides/: chainlit.md  deployment.md  langgraph.md  setup.md
docs/ja/: ABOUT.md  README.md
docs/ja/guides/: chainlit.md
experiments/: content_enhancement_dspy.ipynb  pyproject.toml
fastapi/: Dockerfile
infra/docker/fastapi/: Dockerfile.mcp
scripts/: build_cache.py  debug_mcp.py  debug_mcp_detailed.py  generate_mermaid_graphs.py  mcp_test.py  test_mcp_connection.py  test_mcp_direct.py
src/: __init__.py  config.py  models.py  studio_entry.py
src/adapters/: mock_agent.py
src/api/: deps.py  main.py  schema.py
src/api/core/: arxiv_service.py  graph_service.py  rag_index.py  rag_service.py
src/api/routers/: admin.py  arxiv.py  digest.py  health.py  rag.py
src/api/utils/: persona.py
src/data/: __init__.py  cache_loader.py  paper_cache.py  precomputed_embeddings.pkl  precomputed_papers.json
src/graphs/: __init__.py  content_enhancement.py  corrective_rag.py  message_routing.py
src/integrations/: arxiv_direct.py  mcp_arxiv.py
src/llm/: embeddings.py  generator.py  hyde.py
src/pipelines/: baseline.py  corrective.py
src/retrieval/: __init__.py  arxiv_searcher.py  inmemory.py  sections.py
src/ui/: app.py  components.py  send.py
src/utils/: language_utils.py
tests/: conftest.py  test_data_cache_diagnostics.py
tests/core/: test_rag_index.py
tests/fixtures/: .gitkeep  README.md
tests/test_api/: test_digest_details.py  test_fulltext_endpoint.py  test_prefetch.py
tests/test_graphs/: __init__.py  test_content_enhancement.py  test_corrective_rag.py  test_graph_compilation.py
tests/test_retrieval/: __init__.py  test_arxiv_searcher.py  test_arxiv_searcher_integration.py  test_arxiv_searcher_pytest.py  test_sections.py
tests/test_ui/: __init__.py  test_app_arxiv_integration.py  test_app_arxiv_integration.py.disabled  test_app_arxiv_integration.py.skip  test_arxiv_functions.py
