[project]
name = "papers-rag-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chainlit>=2.8.1",
    "feedparser>=6.0.12",
    "pydantic>=2.11.9",
    "python-dotenv>=1.0.0",
    "openai>=1.0.0",
    "numpy>=1.24.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "langsmith>=0.1.0",
    "pytest>=8.4.2",
    "langgraph-cli[inmem]>=0.4.2",
    "grpcio>=1.75.1",
    "grpcio-tools<=1.75.0",
    "fastapi>=0.116.2",
    "uvicorn[standard]>=0.37.0",
    "httpx>=0.28.1",
    "go-task-bin>=3.45.4",
    "dspy>=3.0.3",
    "pytest-asyncio>=1.2.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "slow: marks tests as slow running",
    "asyncio: marks tests as asyncio tests",
]
filterwarnings = [
    "ignore::pydantic.warnings.PydanticDeprecatedSince20",
    "ignore::DeprecationWarning:pydantic.*",
]
pythonpath = ["src"]

[dependency-groups]
test = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
]
dev = [
    "pre-commit>=4.3.0",
    "ruff>=0.13.2",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
[tool.mypy]
python_version = "3.13"
pretty = true
show_column_numbers = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
check_untyped_defs = true
ignore_missing_imports = true
exclude = ["tests/"]
